--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      LOUDTICKET
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,18 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">YEYE</ion-title>
+      <ion-title size="large">LOUDTICKET</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <app-explore-container name="Tab 1 page"></app-explore-container>
 </ion-content>
+
+<ion-list>
+  <ion-item *ngFor="let event of events">
+    {{ event.name }}
+  </ion-item>
+</ion-list>
+
+
+
