--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -16,7 +16,7 @@
     <div class="logo-container">
       <div class="logo-text">
         <span class="loud-text">loud</span>
-        <svg class="t-svg" width="161" height="44" viewBox="0 0 161 44" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <svg class="t-svg" viewBox="0 0 161 44" xmlns="http://www.w3.org/2000/svg">
           <ellipse cx="80.5" cy="5" rx="80.5" ry="5" fill="#4DB7EC"/>
           <path d="M46 27C46 36.3888 44.2091 44 42 44C39.7909 44 38 36.3888 38 27C38 17.6112 39.7909 10 42 10C44.2091 10 46 17.6112 46 27Z" fill="#4DB7EC"/>
         </svg>
