--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -18,29 +18,31 @@
 }
 
 .logo-text {
-  display: flex;
-  align-items: center;
   font-size: 45px;
   line-height: 62.19px;
   font-family: 'Bagel Fat One', cursive;
   font-weight: 400;
   word-wrap: break-word;
+  display: flex;
+  align-items: flex-end;
+  gap: 0px;
+  position: relative;
 }
 
 .loud-text {
   color: #5669FF;
-  margin-right: 8px;
+  padding-right: 2px;
 }
 
 .icket-text {
   color: #4DB7EC;
-  margin-left: 8px;
+  padding-left: 2px;
 }
 
-.t-svg {
+.stylized-t svg {
   height: 44px;
-  width: 161px;
-  margin: 0 4px;
+  width: 70px;
+  margin-bottom: -2px;
 }
 
 .ellipse {
