--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,53 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 2
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content class="login-page" fullscreen>
+  <div class="content-wrapper">
+    <div class="logo">
+      <span class="loud">loud</span>
+      <svg class="t-line" xmlns="http://www.w3.org/2000/svg" width="80" height="10">
+        <ellipse cx="40" cy="5" rx="40" ry="5" fill="#4DB7EC" />
+      </svg>
+      <span class="icket">icket</span>
+    </div>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
+    <div class="form-container">
+      <h1 class="signin-title">Sign in</h1>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+      <ion-item class="input-item">
+        <ion-icon name="mail-outline" slot="start"></ion-icon>
+        <ion-input placeholder="abc@email.com"></ion-input>
+      </ion-item>
+
+      <ion-item class="input-item">
+        <ion-icon name="lock-closed-outline" slot="start"></ion-icon>
+        <ion-input type="password" placeholder="Your password"></ion-input>
+        <ion-icon name="eye-off-outline" slot="end"></ion-icon>
+      </ion-item>
+
+      <div class="options">
+        <div class="remember-toggle">
+          <ion-toggle color="primary"></ion-toggle>
+          <span class="remember">Remember Me</span>
+        </div>
+        <a class="forgot" href="#">Forgot Password?</a>
+      </div>
+
+      <ion-button expand="block" class="signin-button">
+        SIGN IN
+        <ion-icon slot="end" name="arrow-forward-outline"></ion-icon>
+      </ion-button>
+
+      <div class="divider">
+        <span class="or-text">OR</span>
+      </div>
+
+      <ion-button expand="block" class="google-button" fill="outline">
+        <img src="assets/google.jpg" alt="Google" />
+        Login with Google
+      </ion-button>
+
+      <div class="signup-link">
+        <span>Don't have an account?</span>
+        <a href="#">Sign up</a>
+      </div>
+    </div>
+  </div>
 </ion-content>
